# tree-sitter-dm

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  source.dm  tatus  tree-sitter.json
bindings/c/: tree-sitter-dm.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDm/: dm.h
bindings/swift/TreeSitterDmTests/: TreeSitterDmTests.swift
queries/: highlights.scm  tags.scm
queries/neovim/: highlights.scm  tags.scm
queries/vscode/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: statements.txt
test/highlight/: statements.dm
