[package]
name = "tree-sitter-dm"
description = "DreamMaker grammar"
version = "0.25.0"
authors = ["FeudeyTF <yanmordanenko089@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/feudeytf/tree-sitter-dm"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
